--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,16 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+/* .App-header {
+  background-color: #fffaf6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
+  color: Black;
+} */
 
 .App-link {
   color: #61dafb;
