--- a/src/header.css
+++ b/src/header.css
@@ -15,23 +15,36 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 4vw 8vw;
+    padding: 4vw 4vw;
     background-color: #fdf9f6;
     
   }
   .header-name {
-    width: 90%;
+    width: 100%;
     font-size: 5vw;
     font-weight: bold;
     color: #333;
     text-shadow: 1px 1px 2px #6d6c6c; 
     text-align: center;
     font-family: 'Exo 2', cursive;
-    margin-bottom: 1vw;
+    margin-bottom: -1vw;
   }
   .header-content {
+    width: 90%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    font-size: 2vw;
+  }
+
+  .header-logo img {
+    width: 10vw;
+    margin-top: -5vw;
+  }
+
+  .header-dropdowns {
+    display: flex;
+    align-items: center;
   }
 
 .logo-container {
@@ -119,7 +132,6 @@
   
   .nav-link {
     text-decoration: none;
-    font-size: 2.5vw;
     font-weight: bold;
     color: #333;
     transition: color 0.3s;
@@ -133,7 +145,6 @@
   .language-selector {
     display: flex;
     align-items: center;
-    font-size: 2.5vw;
     font-weight: bold;
     color: #333;
     cursor: pointer;
@@ -153,21 +164,14 @@
     .header-text {
       margin-left: 3vw;
     }
-    .language-dropdown li {
-      font-size: 1vw;
-    }
   }
 
   @media (max-width: 2048px) {
     .header-text {
       margin-left: 2.5vw;
     }
-    .language-selector {
+    .header-content {
       font-size: 3.6vw;
-    }
-  
-    .language-dropdown li {
-      font-size: 1.6vw;
     }
   
     .language-selector .arrow-down {
@@ -179,12 +183,8 @@
     .header-text {
       margin-left: 1.875vw;
     }
-    .language-selector {
+    .header-content {
       font-size: 2.4vw;
-    }
-  
-    .language-dropdown li {
-      font-size: 1.6vw;
     }
   
     .language-selector .arrow-down {
@@ -196,14 +196,10 @@
     .header-text {
       margin-left: 0.75vw;
     }
-    .language-selector {
+    .header-content {
       font-size: 2.4vw;
     }
-  
-    .language-dropdown li {
-      font-size: 1.6vw;
-    }
-  
+
     .language-selector .arrow-down {
       font-size: 1.2vw;
     }
@@ -213,12 +209,8 @@
     .header-text {
       margin-left: -0.5vw;
     }
-    .language-selector {
+    .header-content {
       font-size: 1.5vw;
-    }
-  
-    .language-dropdown li {
-      font-size: 1.6vw;
     }
   
     .language-selector .arrow-down {
@@ -230,12 +222,8 @@
     .header-text {
       margin-left: -2vw;
     }
-    .language-selector {
+    .header-content {
       font-size: 1.2vw;
-    }
-  
-    .language-dropdown li {
-      font-size: 1.6vw;
     }
   
     .language-selector .arrow-down {
@@ -248,7 +236,6 @@
   position: relative; /* Required for dropdown to position correctly */
   display: flex;
   align-items: center;
-  font-size: 2.5vw;
   font-weight: bold;
   color: #333;
   cursor: pointer;
@@ -299,6 +286,8 @@
 .piano-dropdown {
   position: relative;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .dropdown-menu {
