--- a/src/header.css
+++ b/src/header.css
@@ -20,6 +20,9 @@
     
   }
   .header-name {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
     font-size: 5vw;
     font-weight: bold;
@@ -33,13 +36,13 @@
     width: 90%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 2vw;
   }
 
   .header-logo img {
-    width: 10vw;
-    margin-top: -5vw;
+    width: 5vw;
+    margin-right: 2vw;
   }
 
   .header-dropdowns {
