--- a/src/header.css
+++ b/src/header.css
@@ -24,14 +24,24 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    
+    margin-bottom: -1vw;
+  }
+
+  .header a {
+    text-decoration: none;
+  }
+
+  .header-name {
     font-size: 5vw;
     font-weight: bold;
     color: #333;
     text-shadow: 1px 1px 2px #6d6c6c; 
     text-align: center;
     font-family: 'Exo 2', cursive;
-    margin-bottom: -1vw;
+    text-decoration: none;
   }
+
   .header-content {
     width: 90%;
     display: flex;
